--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
+    "@types/rpi-gpio": "^2.1.4",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "onoff": "^6.0.3",
+    "raspi-i2c": "^6.2.4",
     "reflect-metadata": "^0.1.13",
+    "rpi-gpio": "^2.1.7",
     "rxjs": "^7.8.1",
     "yarn": "^1.22.19"
   },
