--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "node-gyp": "^10.0.1",
     "onoff": "^6.0.3",
+    "raspi": "^6.0.1",
     "raspi-i2c": "^6.2.4",
     "reflect-metadata": "^0.1.13",
-    "rpi-gpio": "^2.1.7",
     "rxjs": "^7.8.1",
     "yarn": "^1.22.19"
   },
